[tool.poetry]
name = "act365"
version = "0.1.0"
description = "Python Client for https://act365api.docs.apiary.io/"
authors = ["Simon McCartney <simon@mccartney.ie>"]
readme = "README.md"
packages = [{include = "act365", from = "src"}]

[tool.poetry.scripts]
act365cli = "act365.client:run"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
json5 = "0.9.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-httpx = "^0.30.0"
httpx = {extras = ["cli"], version = "^0.27.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
